...
      value={{
        orders: orders.current,
        numIncomingOrders: numIncomingOrders.current,
        tabStatus: currTabStatus.current,
      }}
    >
      <View style={styles.ordersContainer} testID={'orders_page'}>
        <TopBar navigation={navigation} />
        <Text style={textStyles.headingText}>
          {currTabStatus.current} orders
        </Text>
        <OrdersTab SECTIONS={SECTIONS} setStatus={changeTabStatus} />
        <FlatList
...
