...
  },
  EMAIL_IN_USE: {
    title: 'Email in use',
    message: 'Please use a different email to sign up.',
  },
  WRONG_CREDENTIALS: {
    title: 'Wrong Password',
    message: "You can reset your password if you can't remember.",
  },
  BAD_EMAIL: {
    title: 'Bad Email',
    message: "That doesn't look like a valid email.",
  },
...
